Allow access to item in views.py

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -10,6 +10,15 @@
 
 <body>
     <h1>Things I need to do</h1>
+    <table>
+        {%for items in item%}
+        <tr>
+            <td>{{item.name}}</td>
+            <td>{{item.done}}</td>
+        </tr>
+        {% endfor %}
+    </table>
+
 </body>
 
 </html>
