--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <h1>Add a ToDo Item:</h1>
-    <form method="POST" action="add">
+    <h1>Edit a ToDo Item:</h1>
+    <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <div>
             <p>
-                <button type="submit">Add Item</button>
+                <button type="submit">Update Item</button>
             </p>
         </div>
     </form>
